# meli-microservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: meli_oauth.py  token_store.py
app/core/: config.py  db.py  logging.py
app/health/: router.py
app/listings/: builder.py  router.py  schema.py  service.py  store.py
app/locations/: service.py
app/meli/: client.py  endpoints.py  errors.py
app/notifications/: router.py
examples/: ITEM-MLM3832401852-casa.json  atributos_departamento.json  atrubutos_casa.json  full-inmuebles-sadasi.json  item-MLM3833076594-depto.json  publish_casa.json  publish_desarrollo.json  publish_inmueble.json
mongo-init/: 01_indexes.js
tests/: conftest.py  test_endpoints.py  test_errors.py  test_schema.py
