[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meli-bridge"
version = "0.1.0"
description = "Microservicio intermediario CMS <-> Mercado Libre Inmuebles (MLM)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Desarrollo" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx[http2]>=0.27",
    "motor>=3.4",
    "pymongo>=4.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E701: bloqueamos estilo `if x: do()` en una sola linea - aqui se usa mucho para
#   construir payloads MELI condicionalmente, es legible y compacto.
# B904: `raise ... from err` - en endpoints wrappeamos errores MELI y no queremos
#   arrastrar tracebacks de exception handling; raise from None seria ruidoso.
ignore = ["E501", "E701", "B904"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
